@@ -3,7 +3,6 @@ html>
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <title>Exec Task</title>
-<link rel="stylesheet" type="text/css" href="../stylesheets/antmanual.css">
 </head>
 
 <body>
@@ -18,6 +17,18 @@ systems.</p>
 to send input to it is via the input and inputstring attributes. Also note that
 in Ant 1.6, any attempt to read input in the forked program will receive an
 EOF (-1). This is a change from Ant 1.5, where such an attempt would block.</p>
+
+
+
+<h4>Windows Users</h4>
+<p>The <code>&lt;exec&gt;</code> task delegates to <code>Runtime.exec</code> which in turn
+apparently calls <a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/dllproc/base/createprocess.asp">
+<code>::CreateProcess</code></a>. It is the latter Win32 function that defines
+the exact semantics of the call. In particular, if you do not put a file extension
+on the executable, only ".EXE" files are looked for, not ".COM", ".CMD" or other file
+types listed in the environment variable PATHEXT. That is only used by the shell.
+
+</p>
 
 <h4>Cygwin Users</h4>
 <p>In general the <code>&lt;exec&gt;</code> task will not understand paths such as /bin/sh for
@@ -213,13 +224,21 @@ or the task will fail as follows:
     <td align="center" valign="top">No, default is <i>true</i></td>
   </tr>
   <tr>
-    <td valign="top">resolveExecutable</td>
+    <td valign="top">resolveexecutable</td>
     <td valign="top">When this attribute is true, the name of the executable
-                     if resolved firstly against the project basedir and
+                     is resolved firstly against the project basedir and
                      if that does not exist, against the execution
                      directory if specified. On Unix systems, if you only
                      want to allow execution of commands in the user's path,
                      set this to false.  <em>since Ant 1.6</em></td>
+    <td align="center" valign="top">No, default is <i>false</i></td>
+  </tr>
+  <tr>
+    <td valign="top">searchpath</td>
+    <td valign="top">When this attribute is true nested, then
+                     system path environment variables will
+                     be searched when resolving the location
+                     of the executable. <em>since Ant 1.6.3</em></td>
     <td align="center" valign="top">No, default is <i>false</i></td>
   </tr>
 </table>
